Morphological lexicon reloding under flag -lexreloader and fixed bugs in other flags.